<resources>
    <string name="app_name">Paquito App</string>
    <string name="hello_world">Hola mundo.</string>

    <string name="menu_logros">Logros y Premios</string>
    <string name="menu_trabajos">Empleos Previos</string>
    <string name="menu_educacion">Educación y Formación</string>
    <string name="menu_portafolio">Portfolio</string>
    <string name="menu_contacto">Contacto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_contact">Cómo me puedes contactar</string>

    <string name="contact_email">mailto:paquito@mail.com</string>
    <string name="contact_phone">tel:+525511551155</string>
    <string name="contact_fb">https://facebook.com/paquito2000</string>
    <string name="contact_tw">https://www.twitter.com/paquito2000</string>
    <string name="contact_ig">https://instagram.com/paquito</string>
    <string name="contact_clubhouse">https://clubhouse.com/paquito</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>