<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cornflowerblue"
    >

    <TextView
        android:id="@+id/titulo"
        android:layout_width="341dp"
        android:layout_height="49dp"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/segoeui"
        android:text="Paquito López"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="247dp"
        android:layout_height="226dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo"
        app:srcCompat="@drawable/paquito" />

    <LinearLayout
        android:layout_width="264dp"
        android:layout_height="253dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.120000005">

        <Button
            android:id="@+id/btnLogros"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_logros" />

        <Button
            android:id="@+id/btnEducacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_educacion" />

        <Button
            android:id="@+id/btnTrabajos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_trabajos" />

        <Button
            android:id="@+id/btnPortfolio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_portafolio" />

        <Button
            android:id="@+id/btnContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_contacto" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>